# chalmers

./: .gitignore  README.md
Subatom/: K6.py  K6.tex  K6calc.py
eme102/: formula_sheet.tex
eme102/LNADesign/: LNADesign.tex  calcs.py  flow_chart.fig  main.py  test.py
eme102/LabPre/: calcs.py  data.txt  f551432n0.s2p
eme102/handin1/: Homework1.aux  Homework1.out  Homework1.tex
eme102/handin2/: handin2.aux  handin2.out  handin2.tex
eme102/handin3/: handin3.tex
eme102/handin45/: Handin_4_5.tex
mcc045/ethics/: Essay.tex  Interview.tex  notes.cpp
mcc045/fourier_prelab/: calcs.py  filters.pdf_t  fourier_lab_quiz.aux  fourier_lab_quiz.out  fourier_lab_quiz.tex
mcc045/fourier_report/: fourier_report.tex  fourier_report.toc  lense_setup.fig  lense_setup.fig.bak
mkm135/handin1/ha1/: CMakeLists.txt  diode.c  readme.txt
rry036/: Calcs.m  Calcs.py  Polarisation.m  _region_.tex  handin.py  octave-workspace
satpos/: .gitignore  completion.tex  report.tex  task1.sh
satpos/c-code/: CMakeLists.txt
satpos/c-code/src/: coordinate.c  coordinate.h  coordinate_factory.c  coordinate_factory.h
satpos/c-code/src/io/: csv_reader.c  csv_reader.h  file.c  file.h
satpos/c-code/src/util/: array.c  array.h  iterator.h  str.c  str.h
satpos/c-code/test/: coordinate_factory_test.c  coordinate_test.c  test.c  test.h  test_template.c
satpos/c-code/test/io/: csv_reader_test.c  file_test.c
satpos/c-code/test/util/: array_test.c  str_test.c
ssy085/: Antenna.fig  Antenna.pdf_t  Transmitter.fig  Transmitter.pdf_t  noisefig.py  submarinetxrx.fig  submarinetxrx.pdf_t
(+332 files in other folders)
